--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,7 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=Edu+TAS+Beginner&family=Permanent+Marker&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=Catamaran:wght@100..900&family=Edu+TAS+Beginner&family=Permanent+Marker&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
     background-color: rgb(220 252 231);
+}
+
+.permanent-marker-regular {
+    font-family: "Permanent Marker", cursive;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+.catamaran {
+    font-family: "Catamaran", sans-serif;
+    font-style: normal;
 }
